src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>ARRA_of_AECOM_Fee__c</fullName>
        <label>ARRA % of AECOM Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctName__c</fullName>
        <formula>Account.Name</formula>
        <label>AcctName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Svc_Change_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Service/Change Order/Variation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_In_Number__c</fullName>
        <formula>Amount/1000000</formula>
        <label>AmountInNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asia_Business_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asia Business Manager</description>
        <inlineHelpText>Select an Asia Business Manager</inlineHelpText>
        <label>Asia Business Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AECOM_Employee__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Select the Asia Business Manager</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Opportunities (Asia Business Manager)</relationshipLabel>
        <relationshipName>OpportunitiesKAfr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asia_Project_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asia Project Director</description>
        <inlineHelpText>Select an Asia Project Director</inlineHelpText>
        <label>Asia Project Director</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AECOM_Employee__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Select the Asia Project Director</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Opportunities (Asia Project Director)</relationshipLabel>
        <relationshipName>OpportunitiesKAg1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award_Date_FQ__c</fullName>
        <description>ecreates Fiscal Quarter - displays FQ of Estimated Award date, albeit based on calendar month, not AECOM fiscal month</description>
        <formula>CASE (MONTH( CloseDate ) , 
1, &quot;Q2-&quot; &amp; TEXT(YEAR(CloseDate)) , 
2, &quot;Q2-&quot; &amp; TEXT(YEAR(CloseDate)) , 
3, &quot;Q2-&quot; &amp; TEXT(YEAR(CloseDate)) , 
4, &quot;Q3-&quot; &amp; TEXT(YEAR(CloseDate)) , 
5, &quot;Q3-&quot; &amp; TEXT(YEAR(CloseDate)) , 
6, &quot;Q3-&quot; &amp; TEXT(YEAR(CloseDate)) , 
7, &quot;Q4-&quot; &amp; TEXT(YEAR(CloseDate)) , 
8, &quot;Q4-&quot; &amp; TEXT(YEAR(CloseDate)) , 
9, &quot;Q4-&quot; &amp; TEXT(YEAR(CloseDate)) , 
10, &quot;Q1-&quot; &amp; TEXT(YEAR(CloseDate)+1) , 
11, &quot;Q1-&quot; &amp; TEXT(YEAR(CloseDate)+1) , 
12, &quot;Q1-&quot; &amp; TEXT(YEAR(CloseDate)+1) , 

null)</formula>
        <label>Award Date FQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAFO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Best And Final Offer</inlineHelpText>
        <label>BAFO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BL_Distribution__c</fullName>
        <inlineHelpText>Additional business lines participating</inlineHelpText>
        <label>BL Distribution</label>
        <picklist>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geotechnical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining and Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BTS_Support_Provided__c</fullName>
        <inlineHelpText>Indicates type of support provided by AECOM&apos;s Business Technology Services group during the pursuit.</inlineHelpText>
        <label>BTS Support Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Technology Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo/ Presentation material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other support</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>B_P_Actual_to_date__c</fullName>
        <inlineHelpText>Bid and proposal charges</inlineHelpText>
        <label>Bid &amp; Proposal Actual to-date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_P_Budget__c</fullName>
        <label>Bid &amp; Proposal Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_P_Task_under_threshold__c</fullName>
        <description>Oracle task to be used if this is not for a Key Account and if a discrete number is not opened for this opportunity. Not visible to users.
 Used to display B&amp;P Charge code after GNG approval.
When changing this formula, also change the End-Client Sector field.</description>
        <formula>IF (Client_Group__c = &quot;National Government&quot; &amp;&amp; (BEGINS(Account.Name, &quot;US &quot;) || BEGINS(Account.Name, &quot;USAID&quot;) ) , &quot;USFedGov&quot;,
 IF (Client_Group__c = &quot;National Government&quot; , &quot;OtherNatlGov&quot;,
 
CASE(Account.Client_Subgroup__c, &quot;Airports/Aviation&quot;,&quot;Aviation&quot;,
 &quot;Chemical/Pharmaceutical&quot;, &quot;ChemPharma&quot;, 
&quot;Oil/Gas Refining/Exploration and Prod/Dist&quot;,&quot;OilGas&quot;,
 &quot;Oil and Gas Transmission and Distribution&quot;,&quot;OilGas&quot;,
 &quot;Ports/Marine/Marinas&quot;, &quot;PortMarine&quot;, 
&quot;Rail - Heavy Freight Rail Transportation&quot;, &quot;FreightRail&quot;,
 &quot;Freight Transportation (except rail) and Warehousing&quot;, &quot;Industrial &amp; Manufacturing&quot;,
 &quot;Rail - Private Local and Suburban Transit Passenger&quot;, &quot;Transit&quot;,
 &quot;Healthcare Services (Private)&quot;, &quot;Healthcare&quot;, 
&quot;Healthcare Agency / Services&quot;, &quot;Healthcare&quot;, 
&quot;Education Agency / Services&quot;, &quot;Education&quot;, 
&quot;Education Services (Private)&quot;, &quot;Education&quot;, 
&quot;Sports/Amusement/Recreation&quot;, &quot;Sports&quot;, 
&quot;Leisure/Hospitality&quot;, &quot;Leisure&quot;, 
&quot;Arts/Museum/Galleries/Cultural&quot;, &quot;Leisure&quot;, 
&quot;Media/Entertainment&quot;, &quot;Leisure&quot;, 
&quot;Metals&quot;, &quot;MiningMetals&quot;, 
&quot;Mining Metal/Coal/Other&quot;, &quot;MiningMetals&quot;, 
&quot;Private/Commercial Developers&quot;, &quot;Commercial&quot;, 
&quot;Architect/Engineers/Consultants&quot;, &quot;OtherPrivate&quot;,
 &quot;Legal/Banking/Finance/Insurance&quot;, &quot;Commercial&quot;,
 &quot;Retail and Retail Property&quot;, &quot;Commercial&quot;, 
&quot;Water Utility - Private&quot;, &quot;WaterSys&quot;, 
&quot;Construction Company - Buildings&quot;, &quot;OtherPrivate&quot;,
 &quot;Construction Company - Infrastructure&quot;, &quot;OtherPrivate&quot;,
 &quot;Other Industrial/Commercial&quot;, &quot;OtherPrivate&quot;,
 &quot;Private Justice/Prisons/National Security Agencies / Services&quot;, &quot;OtherPrivate&quot;,
 IF (BEGINS 
(TEXT(Account.Client_Subgroup__c), &quot;Power&quot;),&quot;Power&quot;, 
IF(BEGINS (Practice_Area_of_Primary_AECOM_Dept__r.Name, &quot;Highway&quot;), &quot;HwyBridge&quot;,
 CASE (Practice_Area_of_Primary_AECOM_Dept__r.Name, &quot;Water&quot;, &quot;WaterSys&quot;,
 &quot;Wastewater&quot; , &quot;WWSys&quot;, 
&quot;Water Resources&quot;, &quot;WaterRes&quot;, 
&quot;Transit / Rail&quot;, &quot;Transit&quot;, 
&quot;Transit&quot;, &quot;Transit&quot;, 
&quot;Aviation&quot;, &quot;Aviation&quot;, 

CASE(Account.Client_Group__c, &quot;Municipal&quot;, &quot;OtherPublic&quot;, &quot;State/Province Agencies&quot;, &quot;OtherPublic&quot;, &quot;Private&quot;, &quot;OtherPrivate&quot;,
 &quot;IndustMfg&quot;)))))))</formula>
        <label>B&amp;P Task under threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Department_2_Percent__c</fullName>
        <description>Backup Department 2 percent</description>
        <label>Backup Department 2 Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Backup_Department_2_Practice_Area__c</fullName>
        <description>Backup department 2 practice area</description>
        <label>Backup Department 2 Practice Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Department_2_Sub_Practice_Area__c</fullName>
        <description>Backup Department 2 subpractice area</description>
        <label>Backup Department 2 Sub Practice Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Department_2__c</fullName>
        <description>Backup Department 2</description>
        <label>Backup Department 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Department_3_Percent__c</fullName>
        <description>Backup department 3 percent</description>
        <label>Backup Department 3 Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Backup_Department_3_Practice_Area__c</fullName>
        <description>Backup department 3 practice area</description>
        <label>Backup Department 3 Practice Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Department_3_Sub_Practice_Area__c</fullName>
        <description>Backup department 3 sub practice area</description>
        <label>Backup Department 3 Sub Practice Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Department_3__c</fullName>
        <description>Backup Department 3</description>
        <label>Backup Department 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Department_4_Percent__c</fullName>
        <description>Backup department 4 percent</description>
        <label>Backup Department 4 Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Backup_Department_4_Practice_Area__c</fullName>
        <description>Backup Department 4 practice area</description>
        <label>Backup Department 4 Practice Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Department_4_Sub_Practice_Area__c</fullName>
        <description>Backup department 4 sub practice area</description>
        <label>Backup Department 4 Sub Practice Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Department_4__c</fullName>
        <description>Backup department 4</description>
        <label>Backup Department 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Primary_Dept_Lookup__c</fullName>
        <description>Backup of primary department id</description>
        <label>Backup Primary Dept Lookup</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Primary_Dept_Percent__c</fullName>
        <description>Backup of primary dept percent</description>
        <label>Backup Primary Dept Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Backup_Primary_Dept_Practice_Area__c</fullName>
        <description>Backup of primary department practice area</description>
        <label>Backup Primary Dept Practice Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Primary_Dept_Sub_Practice_Area__c</fullName>
        <description>Backup primary dept sub practice area</description>
        <label>Backup Primary Dept Sub Practice Area</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked via apex to verify that the Oppt Dept. fields have been backed up so they don&apos;t get overwritten again should they trigger kick in after they&apos;ve already been backed up.</description>
        <label>Backup Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Cost_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Formerly Bid Manager</description>
        <inlineHelpText>Technical person in charge of the costing team.</inlineHelpText>
        <label>Bid/Cost Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AECOM_Employee__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Select the Bid Manager</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Opportunities (Bid Manager)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_DirectorUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_ManagerUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Proposal_Actual_YTD__c</fullName>
        <inlineHelpText>From Oracle - displays charges to date for current fiscal year only. Updated monthly with prior month&apos;s charges.</inlineHelpText>
        <label>Bid &amp; Proposal Actual YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Proposal_Charge_Type__c</fullName>
        <inlineHelpText>Value must be selected if a B&amp;P charge number is entered.</inlineHelpText>
        <label>Bid &amp; Proposal  Charge # Type</label>
        <picklist>
            <picklistValues>
                <fullName>Specific to this opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic charge number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bid_Proposal_Charge__c</fullName>
        <description>Originally entered by user and required by a validation rule at stages 2-5.
For FY14, in Americas is updated by a trigger that moves the charge code from the B&amp;P Charge Number field on the GNG record.</description>
        <inlineHelpText>EMEA and APAC: Enter B&amp;P number to which non-CMC staff charges time for this pursuit. Americas: Discrete B&amp;P #s are entered by Finance. Below-threshold generic numbers are entered by a formula.</inlineHelpText>
        <label>Bid &amp; Proposal Charge #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Big_Cities_Initiative_Location__c</fullName>
        <formula>IF (CONTAINS ( Account.Name , &quot;London&quot;) &amp;&amp; ISPICKVAL (ProjectCountry__c  , &quot;United Kingdom&quot;) &amp;&amp; ( ISPICKVAL ( Account.Client_Group__c, &quot;Municipal&quot;) || ISPICKVAL ( Account.Client_Group__c, &quot;National Government&quot;)) , &quot;London&quot;,  
IF (BEGINS ( Account.Name , &quot;Los Angeles&quot;), &quot;Los Angeles&quot;,  
IF (CONTAINS (Account.Name, &quot;New York City&quot;), &quot;New York&quot;,
IF (BEGINS (Account.Name, &quot;Chicago&quot;), &quot;Chicago&quot;,
IF (CONTAINS (Account.Name, &quot;Greater Chicago&quot;), &quot;Chicago&quot;,
IF (CONTAINS (Account.Name, &quot;Port Authority of New York and New Jersey&quot;), &quot;New York&quot;,
IF (CONTAINS (Account.Name, &quot;New York State Department of Transportation - Region 11&quot;), &quot;New York&quot;,
IF (CONTAINS (Account.Name, &quot;NYC Office&quot;), &quot;New York&quot;,
IF (CONTAINS (Account.Name, &quot;City University of New York&quot;), &quot;New York&quot;, 
IF (CONTAINS (Account.Name, &quot;University of California - Los Angeles&quot;), &quot;Los Angeles&quot;,  

Project_City__c 
))))))))))</formula>
        <label>Big Cities Initiative Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_date__c</fullName>
        <description>Field update workflow is used to blank out this field for opportunities not in Stage 6.</description>
        <inlineHelpText>Date the project was booked in the accounting system. For Stage 6 opportunities only.</inlineHelpText>
        <label>Book date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Engineering_End_Market__c</fullName>
        <description>Discontinued use of this field 2 June 2014. Removed from page layouts at request of Kimberly Cowern.</description>
        <formula>IF
( Business_Line_of_Primary_AECOM_Dept__c  &lt;&gt; &apos;Building Engineering&apos;, null,
CASE ( Practice_Area_of_Primary_AECOM_Dept__r.Name, &quot;Commercial&quot; , &quot;Commercial&quot;, &quot;Residential&quot;, &quot;Commercial&quot;, &quot;Media&quot;, &quot;Commercial&quot;, 
&quot;Retail&quot; ,&quot;Commercial&quot;, &quot;Hotels &amp; Resorts&quot;, &quot;Leisure&quot;,
 
&quot;Education&quot; , &quot;Education&quot;, 

&quot;Government&quot;, &quot;Government&quot;,  &quot;Justice&quot;, &quot;Government&quot;,  &quot;Defence&quot;, &quot;Government&quot;,  &quot;Defense&quot;, &quot;Government&quot;,  

&quot;Healthcare&quot;, &quot;Healthcare&quot;,

&quot;Industrial&quot;, &quot;Industrial&quot;, &quot;Data Centres&quot; , &quot;Commercial&quot;, &quot;Labs/Pharmaceuticals&quot; , &quot;Industrial&quot;, &quot;Waste Energy&quot; , &quot;Energy &amp; Utilities&quot;, 
&quot;District Energy Utilities&quot; , &quot;Energy &amp; Utilities&quot;, 

&quot;Sports &amp; Venues&quot; , &quot;Sports &amp; Venues&quot;, &quot;Arts, Culture, Entertainment&quot; , &quot;Leisure&quot;, 
&quot;Mining&quot;, &quot;Mining&quot;,
&quot;Transport &amp; Infrastructure&quot; , &quot;Transport &amp; Infrastructure&quot;, &quot;Airport &amp; Rail Hubs&quot; , &quot;Transport &amp; Infrastructure&quot;,  &quot;Infrastructure&quot; , &quot;Transport &amp; Infrastructure&quot;, 
null))</formula>
        <inlineHelpText>Autopopulated based on Market Segment/Practice Area</inlineHelpText>
        <label>Building Engineering End Market_OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Engineering_Practice_Areas__c</fullName>
        <label>Building Engineering Practice Areas</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Acoustics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adv Design/Applied Research/PolicyAdvice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/AV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Buildings_Places_End_Market__c</fullName>
        <formula>IF ( Business_Line_of_Primary_AECOM_Dept__c = &apos;Environment&apos;, null,
IF ( Business_Line_of_Primary_AECOM_Dept__c = &apos;Water&apos;, null,
IF ( Business_Line_of_Primary_AECOM_Dept__c = &apos;Transportation&apos;, null,
IF ( Business_Line_of_Primary_AECOM_Dept__c = &apos;Energy&apos;, null,
IF ( Business_Line_of_Primary_AECOM_Dept__c = &apos;Mining and Metals&apos;, null,
IF ( Business_Line_of_Primary_AECOM_Dept__c = &apos;Government Services&apos;, null,
IF ( Business_Line_of_Primary_AECOM_Dept__c = &apos;Construction Services&apos;, null,

IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Residential&apos;, &apos;Commercial&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Education&apos;, &apos;Education&apos;,

IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Cogeneration&apos;, &apos;Energy &amp; Utilities&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Energy Efficiency&apos;, &apos;Energy &amp; Utilities&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Gas Utilities&apos;, &apos;Energy &amp; Utilities&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Hydropower&apos;, &apos;Energy &amp; Utilities&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Transmission &amp; Distribution&apos;, &apos;Energy &amp; Utilities&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Thermal &amp; Geothermal Gen&apos;, &apos;Energy &amp; Utilities&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Wind &amp; Solar&apos;, &apos;Energy &amp; Utilities&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Water Systems&apos;, &apos;Energy &amp; Utilities&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Wastewater Systems&apos;, &apos;Energy &amp; Utilities&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Water Resources&apos;, &apos;Energy &amp; Utilities&apos;,

IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Education&apos;, &apos;Education&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Healthcare&apos;, &apos;Healthcare&apos;,

IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Civic Plans&apos;, &apos;Government&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Defense&apos;, &apos;Government&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Disaster Recovery&apos;, &apos;Government&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Justice&apos;, &apos;Government&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Leisure&apos;, &apos;Leisure&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Mining &amp; Metals&apos;, &apos;Mining&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Sports&apos;, &apos;Sports&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Aviation&apos;, &apos;Transport&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Rail &amp; Transit Systems&apos;, &apos;Transport&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Freight Rail&apos;, &apos;Transport&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Highway &amp; Bridge&apos;, &apos;Transport&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Port &amp; Marine&apos;, &apos;Transport&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Transit&apos;, &apos;Transport&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Transp Planning &amp; Advisory&apos;, &apos;Transport&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Tunnels&apos;, &apos;Transport&apos;,

IF ( ISPICKVAL ( Account.Client_Group__c , &apos;Municipal&apos;), &apos;Government&apos;,
IF ( ISPICKVAL ( Account.Client_Group__c , &apos;National Government&apos;), &apos;Government&apos;,
IF ( ISPICKVAL ( Account.Client_Group__c , &apos;State/Province Agencies&apos;), &apos;Government&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Building Repositioning&apos; , &apos;Commercial&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Commercial &amp; Mixed Use&apos;, &apos;Commercial&apos;,
IF ( Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Commercial Interiors&apos;, &apos;Commercial&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Office - Core &amp; Shell&apos;, &apos;Commercial&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Office ? Core &amp; Shell&apos;, &apos;Commercial&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Industrial &amp; Manufacturing&apos;, &apos;Industrial&apos;,
IF (Practice_Area_of_Primary_AECOM_Dept__r.Name = &apos;Technology &amp; Data Centers&apos;, &apos;Industrial&apos;,

null ))))))))))))))))))))))))))))))))))))))))))))))</formula>
        <inlineHelpText>Autopopulated by a formula based on BL end market or market segment</inlineHelpText>
        <label>Buildings + Places End Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line_of_Primary_AECOM_Dept__c</fullName>
        <formula>AECOM_Primary_Dept_Lookup__r.Business_Line_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read Only. To change, click Opportunity Departments at the top of the page, then click the &apos;New/Edit Opportunity Departments&apos; button. The primary BL depends on the department selected as primary.</inlineHelpText>
        <label>Primary Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_Alliance_Partner__c</fullName>
        <description>Yes means the CAM Alliance Partner field on the account is checked.</description>
        <formula>IF ( Account.CAM_Alliance_Partner__c  = TRUE , &quot;Yes&quot; , &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inherited from Account. To change, edit the account record.</inlineHelpText>
        <label>CAM Alliance Partner?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_Strategic_Partner__c</fullName>
        <description>Is the Account related to this opportunity a CAM Account?</description>
        <formula>TEXT(Account.CAM_Account_Status__c)</formula>
        <inlineHelpText>Inherited from Account record</inlineHelpText>
        <label>CAM Group Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Type__c</fullName>
        <inlineHelpText>CM-1a: DB, GC, CM-GMP, EPC, etc.
CM-1b: CM-Constructor, CM-FGC, PM with Fixed GCs
CM-2: CM-Agent with Actual GCs
CM-3a: OR, Program or Project Mgmt.
CM-3b: Consultant</inlineHelpText>
        <label>CM Type</label>
        <picklist>
            <picklistValues>
                <fullName>CM-1a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM-1b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM-3a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM-3b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSNA_Collaboration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this is a global priority opportunity for the Construction Services BL.</description>
        <inlineHelpText>Check only if CS NA is collaborating with another Business Line within AECOM.</inlineHelpText>
        <label>CS/NA Collaboration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Gross_Margin_Percent__c</fullName>
        <description>Percentage of expected fee</description>
        <inlineHelpText>Enter percentage of expected fee</inlineHelpText>
        <label>CS Gross Margin %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CS_Gross_Margin__c</fullName>
        <description>Calculation based on CM Type</description>
        <formula>IF ( ISPICKVAL (CM_Type__c, &apos;CM-1a&apos;), CS_Gross_Margin_Percent__c * Amount , 
IF ( ISPICKVAL (CM_Type__c, &apos;CM-1b&apos;), CS_Gross_Margin_Percent__c * Amount , 
IF ( ISPICKVAL (CM_Type__c, &apos;CM-2&apos;), CS_Gross_Margin_Percent__c * Construction_cost__c , 
IF ( ISPICKVAL (CM_Type__c, &apos;CM-3a&apos;) &amp;&amp; Amount &gt; 0, CS_Gross_Margin_Percent__c * Amount , 
IF ( ISPICKVAL (CM_Type__c, &apos;CM-3b&apos;) &amp;&amp; Amount &gt; 0, CS_Gross_Margin_Percent__c * Amount , 
IF ( ISPICKVAL (CM_Type__c, &apos;CM-3a&apos;) &amp;&amp; Program_Estimated_Revenue__c &gt; 0, CS_Gross_Margin_Percent__c * Program_Estimated_Revenue__c , 
IF ( ISPICKVAL (CM_Type__c, &apos;CM-3b&apos;) &amp;&amp; Program_Estimated_Revenue__c &gt; 0, CS_Gross_Margin_Percent__c * Program_Estimated_Revenue__c , 

null)))))))</formula>
        <inlineHelpText>Uneditable calculation. If CM Type is 1 or 3: GM% *AECOM Gross Contract Revenue; if CM Type is 2: GM% * Construction cost.</inlineHelpText>
        <label>CS Gross Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CS_Marketing_Team__c</fullName>
        <description>Construction Services team members working on this opportunity.</description>
        <inlineHelpText>Enter Construction Services team members working on this opportunity.</inlineHelpText>
        <label>CS Marketing Team</label>
        <picklist>
            <picklistValues>
                <fullName>Athena DiIullo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cara Lang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jennifer Geller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lauren Roethke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lindsay Rizzo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liz Santonas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rene Beight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarah Larkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sterling Baker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Bretschneider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Horwitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tara Kassal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Varda Albert</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CaptureManager__c</fullName>
        <formula>Capture_Manager__r.First_Name__c&amp;&quot; &quot;&amp;Capture_Manager__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capture Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Manager_Email__c</fullName>
        <description>Entered and revised by a field update: https://aecom.my.salesforce.com/04Ya00000003r2r</description>
        <label>Capture Manager Email</label>
        <type>Email</type>
    </fields>
</CustomObject>